# conway

./: .gitignore  README.md  pyproject.toml
conway/: __init__.py  board.py  main.py  read.py  write.py
grids/: grid_test.npy  grid_test_random.npy
tests/: test_conway.py
