[tool.poetry]
name = "conway"
version = "0.1.0"
description = "My take on the implementation of Conway's Game of Life"
authors = ["dasdias <das.dias6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
numpy = "^1.22.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
